Add seq2seq model training